# apps/server/Modules/Auth/routes/api.php
@@ -2,7 +2,7 @@
 
 use Illuminate\Support\Facades\Route;
 use Modules\Auth\app\Http\Controllers\AuthController;
-use Modules\Auth\app\Http\Controllers\SocialiteController;
+//use Modules\Auth\app\Http\Controllers\SocialiteController;
 use Modules\Auth\app\Http\Controllers\UserController;
 
 Route::prefix('v1')->group(function () {
@@ -11,12 +11,13 @@ Route::prefix('v1')->group(function () {
     Route::post('login', [AuthController::class, 'login']);
     Route::post('forgot-password', [AuthController::class, 'forgotPassword']);
     Route::post('reset-password', [AuthController::class, 'resetPassword']);
-    Route::get('auth/{provider}', [SocialiteController::class, 'redirectToProvider']);
-    Route::get('auth/{provider}/callback', [SocialiteController::class, 'handleProviderCallback']);
+    //Route::get('auth/{provider}', [SocialiteController::class, 'redirectToProvider']);
+    //Route::get('auth/{provider}/callback', [SocialiteController::class, 'handleProviderCallback']);
     // ROTAS PROTEGIDAS
     Route::middleware('auth:sanctum')->group(function () {
         Route::post('logout', [AuthController::class, 'logout']);
         Route::put('user', [UserController::class, 'update']);
+        Route::get('auth/token-verify', [AuthController::class, 'TokenVerify']);
         Route::get('user', function (Request $request) {
             return $request->user();
         });
